# covid-impacts

./: Dockerfile  README.md
bot/: .dockerignore  Dockerfile  __main__.py  pyproject.toml  requirements.txt
bot/interfaces/: database_interface.py
bot/services/: queries.py
collector/: __main__.py  pyproject.toml
collector/services/: extract.py  sources.py  transform.py
data_collect/data/: PIB.csv
